<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="hello">Hello World, SplashScreenActivity!</string>
	<string
		name="app_name">Manageroid</string>
	<string
		name="service_created">Service onCreate invoked</string>
	<string
		name="service_started">Service onStart invoked</string>
	<string
		name="service_destroyed">Service destroyed</string>
	<string
		name="task_list">List of tasks</string>
	<string
		name="create_new">Add new task</string>
	<string
		name="delete_task">Delete this task</string>
	<string
		name="modify">Modify this task</string>
	<string
		name="prerequisits">Prerequisits</string>
	<string
		name="waht_to_do">What to do</string>
	<string
		name="revertable">Revertable</string>
	<string
		name="active">Manageroid Active</string>
	<string
		name="inactive">Manageroid Inactive</string>
	<string
		name="modify_task">Modify this task</string>
	<string
		name="create_task">Create new task</string>

	<string
		name="exec_send_mail">Send email</string>
	<string
		name="exec_send_sms">Send SMS</string>
	<string
		name="exec_airplane_mode">Set Airplane Mode</string>
	<string
		name="exec_ringer_mode">Set Ringer Mode</string>
	<string
		name="save_task">Save task</string>
	<string
		name="ok">OK</string>
	<string
		name="sms_content">What to be the content of the SMS?</string>

</resources>
