<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/task_layout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal">

	<TextView
		android:text="@string/create_task"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#ff0000" />

	<TextView
		android:text="What is required"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView
		android:text="What to do"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<RadioGroup
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/exec_types">
		<RadioButton
			android:checked="true"
			android:id="@+id/option1"
			android:text="@string/exec_send_mail" />
		<RadioButton
			android:checked="false"
			android:id="@+id/option2"
			android:text="@string/exec_send_sms"
			android:onClick="sendFuckingSMS" />
		<RadioButton
			android:checked="false"
			android:id="@+id/option3"
			android:text="@string/exec_ringer_mode" />
		<RadioButton
			android:checked="false"
			android:id="@+id/option4"
			android:text="@string/exec_airplane_mode" />
	</RadioGroup>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="onClick"
		android:id="@+id/save_button"
		android:text="@string/save_task" />


</LinearLayout>